# dbt-sqlite-playground

./: .gitignore  LICENSE  README.md  Taskfile.yml  populate.py  pyproject.toml
playground/: dbt_project.yml  profiles.yml
playground/models/: fct_paid_income.sql  playground.yml  schema.yml  stg_cost_per_order_line.sql
playground/tests/: assert_stg_cost_per_order_line.sql
